--- a/compiled-templates/modules/insights/insights.tpl.html
+++ b/compiled-templates/modules/insights/insights.tpl.html
@@ -5,7 +5,7 @@
     <a data-ng-class="{ active: activeTab.name == 'referalls' }" data-ng-model="activeTab.name" btn-radio="'referalls'" class="left-nav-link">Referrals<i class="fa fa-caret-right"></i></a>
   </div>
   <div class="tab-content">
-    <div data-ng-show="activeTab.name == 'earnings'" class="charts-container">
+    <div data-ng-show="activeTab.name == 'earnings'" {{hbsShow "activeTab.name == 'earnings'"}} class="charts-container">
       <div class="row numbers">
         <div class="col-sm-3 col-xs-6">
           <div class="number">$10.55</div>
@@ -110,33 +110,41 @@
         <div class="col-sm-6">
           <h4>Top Brands</h4>
           <ul class="list-unstyled">
-            <li class="top-list-item" data-ng-repeat="brand in data.best.brands|orderBy: '-y'">
-              <a href="<span data-ng-bind=" brand.url ">{{brand.url}}</span>" target="_blank">
-                <span class="name"><span data-ng-bind="brand.key">{{brand.key}}</span></span>
-              </a>
-              <span class="value">$<span data-ng-bind="brand.y">{{brand.y}}</span></span>
-            </li>
+            {{#forEach 'brand' in data.best.brands|orderBy: '-y'}}
+              <li class="top-list-item" data-ng-repeat="brand in data.best.brands|orderBy: '-y'">
+
+                <a href="{{brand.url}}" target="_blank" data-ng-attr-href="&#123;&#123;brand.url&#125;&#125;">
+                  <span class="name"><span data-ng-bind="brand.key">{{brand.key}}</span></span>
+                </a>
+                <span class="value">$<span data-ng-bind="brand.y">{{brand.y}}</span></span>
+              </li>
+            {{/forEach}}
+
           </ul>
         </div>
         <div class="col-sm-6">
           <h4>Top Retailers</h4>
           <ul class="list-unstyled">
-            <li class="top-list-item" data-ng-repeat="retailer in data.best.retailers|orderBy: '-y'">
-              <a href="<span data-ng-bind=" retailer.url ">{{retailer.url}}</span>" target="_blank">
-                <span class="name"><span data-ng-bind="retailer.key">{{retailer.key}}</span></span>
-              </a>
-              <span class="value">$<span data-ng-bind="retailer.y">{{retailer.y}}</span></span>
-            </li>
+            {{#forEach 'retailer' in data.best.retailers|orderBy: '-y'}}
+              <li class="top-list-item" data-ng-repeat="retailer in data.best.retailers|orderBy: '-y'">
+
+                <a href="{{retailer.url}}" target="_blank" data-ng-attr-href="&#123;&#123;retailer.url&#125;&#125;">
+                  <span class="name"><span data-ng-bind="retailer.key">{{retailer.key}}</span></span>
+                </a>
+                <span class="value">$<span data-ng-bind="retailer.y">{{retailer.y}}</span></span>
+              </li>
+            {{/forEach}}
+
           </ul>
         </div>
       </div>
     </div>
 
-    <div data-ng-show="activeTab.name == 'payments'" class="payments-container">
+    <div data-ng-show="activeTab.name == 'payments'" {{hbsShow "activeTab.name == 'payments'"}} class="payments-container">
       <div class="padded">TODO...</div>
     </div>
 
-    <div data-ng-show="activeTab.name == 'referalls'" class="referalls-container">
+    <div data-ng-show="activeTab.name == 'referalls'" {{hbsShow "activeTab.name == 'referalls'"}} class="referalls-container">
       <div class="padded">TODO...</div>
     </div>
   </div>
