--- a/compiled-templates/modules/search/search.tpl.html
+++ b/compiled-templates/modules/search/search.tpl.html
@@ -5,16 +5,7 @@
       <div class="preview-image-container">
         {{#if activeProduct.product}}
           <img data-ng-if="activeProduct.product" load-animation="fade" class="preview-image" data-ng-src="&#123;&#123;activeProduct.product.image.sizes.Original.url&#125;&#125;" src="{{activeProduct.product.image.sizes.Original.url}}" data-ng-attr-src="&#123;&#123;activeProduct.product.image.sizes.Original.url&#125;&#125;">
-
-
-      </div>
-      {{/if}}
-
-
-      <div class="product-info">
-        <h3 class="name">
-          <span data-ng-bind="activeProduct.product.name">{{activeProduct.product.name}}</span>
-        </h3>
+        {{/if}}
         <span class="price">
           <b><span data-ng-bind="activeProduct.product.salePriceLabel || activeProduct.product.priceLabel">{{expression "activeProduct.product.salePriceLabel || activeProduct.product.priceLabel"}}</span>
         </b>
@@ -39,7 +30,7 @@
           </div>
         </div>
 
-        <input value="{{activeProduct.product.clickUrl}}" class="link-input" data-ng-keypress="keypressProductLinkInput($event)" data-ng-click="clickProductLinkInput($event)" data-ng-attr-value="&#123;&#123;activeProduct.product.clickUrl&#125;&#125;">
+        <input value="<span data-ng-bind=" activeProduct.product.clickUrl ">{{activeProduct.product.clickUrl}}</span>" class="link-input" data-ng-keypress="keypressProductLinkInput($event)" data-ng-click="clickProductLinkInput($event)">
 
         <div>
           <a data-ng-click="toggleFavorite(activeProduct.product)" data-ng-class="{'fa-heart': activeProduct.product.favorite, 'fa-heart-o': !activeProduct.product.favorite}" class="favorite favorite-large fa fa-heart-o"></a>
@@ -91,7 +82,7 @@
 
           <div data-ng-show="activeFilters.length" {{hbsShow "activeFilters.length"}} class="active-filters-container">
             {{#forEach 'filter' in activeFilters}}
-              <a data-ng-click="removeFilter(filter)" class="active-filter {{filter.type}}" data-ng-repeat="filter in activeFilters" data-ng-attr-class="active-filter &#123;&#123;filter.type&#125;&#125;">
+              <a data-ng-click="removeFilter(filter)" class="active-filter <span data-ng-bind=" filter.type ">{{filter.type}}</span>" data-ng-repeat="filter in activeFilters">
 
                 <span data-ng-bind="filter.name">{{filter.name}}</span>
                 <i class="fa fa-times"></i>
@@ -133,7 +124,7 @@
 
               <input data-ng-model="input.brand" type="search" results="5" class="search-brands-input" placeholder="Search Brands...">
               <div class="accordion-content">
-                {{#forEach 'brand' in brands | limitTo: 150}}
+                {{#forEach 'brand' in brands}}
                   <a data-ng-click="toggleFilter(brand)" class="brand-choice" data-ng-click="brand.active = !brand.active" data-ng-class="{ active: brand.active }" data-ng-repeat="brand in brands | limitTo: 150">
 
                     <span data-ng-bind="brand.name">{{brand.name}}</span>
@@ -183,7 +174,7 @@
               <input data-ng-model="input.store" type="search" results="5" placeholder="Search Stores..." class="search-stores-input">
 
               <div class="accordion-content">
-                {{#forEach 'store' in stores | limitTo: 150}}
+                {{#forEach 'store' in stores}}
                   <a data-ng-click="toggleFilter(store)" data-ng-model="store.query" class="store-choice" data-ng-click="store.active = !store.active" data-ng-class="{ active: store.active }" data-ng-repeat="store in stores | limitTo: 150">
 
                     <span data-ng-bind="store.name">{{store.name}}</span>
@@ -286,7 +277,8 @@
               </div>
 
               <div class="product-image-container">
-                <img data-ng-click="showModal(result)" load-animation="fade" class="search-result-image" data-ng-src="&#123;&#123;result.image.sizes.Large.url&#125;&#125;" src="{{result.image.sizes.Large.url}}" data-ng-attr-src="&#123;&#123;result.image.sizes.Large.url&#125;&#125;">
+                <img data-ng-click="showModal(result)" load-animation="fade" class="search-result-image" data-ng-src="&#123;&#123;result.image.sizes.Large.url&#125;&#125;" src="<span data-ng-bind=" result.image.sizes.Large.url
+                ">{{result.image.sizes.Large.url}}</span>">
               </div>
 
               <div class="product-info">
